# dictionary

./: Cargo.toml  README.txt
src/: main.rs
templates/: word-detail.md  word.md
