[package]
name = "dict"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.11.1"
bat = "0.22.1"
futures = "0.3.25"
reqwest = { version = "0.11.13", features = ["json", "stream"] }
rodio = "0.16.0"
serde = { version = "1.0.152", features = ["serde_derive", "derive"] }
serde_json = "1.0.91"
tempfile = "3.3.0"
thiserror = "1.0.38"
tokio = { version = "1.24.1", features = ["full"] }
